// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal Content Test description 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-backdrop"
  >
    <div
      class="pf-v6-l-bullseye"
    >
      <div
        aria-labelledby="boxId"
        aria-modal="true"
        class="pf-v6-c-modal-box"
        data-ouia-component-type="PF6/ModalContent"
        data-ouia-safe="true"
        descriptorid="descriptorId"
        id="boxId"
        labelid="labelId"
        role="dialog"
      >
        This is a ModalBox header
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Modal Content Test isOpen 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-backdrop"
  >
    <div
      class="pf-v6-l-bullseye"
    >
      <div
        aria-labelledby="boxId"
        aria-modal="true"
        class="pf-v6-c-modal-box"
        data-ouia-component-type="PF6/ModalContent"
        data-ouia-safe="true"
        descriptorid="descriptorId"
        id="boxId"
        labelid="labelId"
        role="dialog"
      >
        This is a ModalBox header
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Modal Content Test only body 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-backdrop"
  >
    <div
      class="pf-v6-l-bullseye"
    >
      <div
        aria-labelledby="boxId"
        aria-modal="true"
        class="pf-v6-c-modal-box"
        data-ouia-component-type="PF6/ModalContent"
        data-ouia-safe="true"
        descriptorid="descriptorId"
        id="boxId"
        labelid="labelId"
        role="dialog"
      >
        This is a ModalBox header
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Modal Content Test with onclose 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-backdrop"
  >
    <div
      class="pf-v6-l-bullseye"
    >
      <div
        aria-labelledby="boxId"
        aria-modal="true"
        class="pf-v6-c-modal-box pf-m-lg"
        data-ouia-component-type="PF6/ModalContent"
        data-ouia-safe="true"
        descriptorid="descriptorId"
        id="boxId"
        labelid="labelId"
        role="dialog"
      >
        <div
          class="pf-v6-c-modal-box__close"
        >
          <button
            aria-label="Close"
            class="pf-v6-c-button pf-m-plain"
            data-ouia-component-id="OUIA-Generated-Button-plain-1"
            data-ouia-component-type="PF6/Button"
            data-ouia-safe="true"
            type="button"
          >
            <span
              class="pf-v6-c-button__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                width="1em"
              >
                <svg
                  class="pf-v6-icon-default"
                  viewBox="0 0 352 512"
                >
                  <path
                    d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                  />
                </svg>
                <svg
                  class="pf-v6-icon-unified"
                  viewBox="0 0 32 32"
                >
                  <path
                    d="M28.707 27.293a.999.999 0 1 1-1.414 1.414L16 17.414 4.707 28.707a.997.997 0 0 1-1.414 0 .999.999 0 0 1 0-1.414L14.586 16 3.293 4.707a.999.999 0 1 1 1.414-1.414L16 14.586 27.293 3.293a.999.999 0 1 1 1.414 1.414L17.414 16l11.293 11.293Z"
                  />
                </svg>
              </svg>
            </span>
          </button>
        </div>
        This is a ModalBox header
      </div>
    </div>
  </div>
</DocumentFragment>
`;
